--- a/vsety.frontend/package.json
+++ b/vsety.frontend/package.json
@@ -21,12 +21,14 @@
     "@nextui-org/select": "^2.2.5",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
+    "animejs": "^3.2.2",
     "framer-motion": "^11.3.31",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
